// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreenButton renders 1`] = `
<OperationButton
  reasonProps={
    Array [
      0,
      "css-h4v74b css-1eo5al3",
      [Function],
    ]
  }
/>
`;

exports[`GreenButton renders a class name 1`] = `
<OperationButton
  reasonProps={
    Array [
      0,
      "css-h4v74b css-1eo5al3 css-aori8y",
      [Function],
    ]
  }
/>
`;
